# rhi

./: .clang-format  CMakeLists.txt
include/rhi/: rhi.h  rhi_cpp.h
src/: AdapterBase.cpp  AdapterBase.h  BindSetBase.cpp  BindSetBase.h  BindSetLayoutBase.cpp  BindSetLayoutBase.h  BufferBase.cpp  BufferBase.h  CallbackTaskManager.cpp  CallbackTaskManager.h  CommandAllocator.cpp  CommandAllocator.h  CommandEncoder.cpp  CommandEncoder.h  CommandListBase.cpp  CommandListBase.h  Commands.cpp  Commands.h  ComputePassEncoder.cpp  ComputePassEncoder.h  ComputePipelineBase.cpp  ComputePipelineBase.h  DeviceBase.cpp  DeviceBase.h  EncodingContext.cpp  EncodingContext.h  FeatureSet.h  InstanceBase.cpp  InstanceBase.h  PassEncoder.cpp  PassEncoder.h  PassResourceUsage.cpp  PassResourceUsage.h  PerShaderStage.hpp  PipelineBase.cpp  PipelineBase.h  PipelineCacheBase.cpp  PipelineLayoutBase.cpp  PipelineLayoutBase.h  QueueBase.cpp  (+27 more)
src/common/: AdapterBase.cpp  BindSetBase.cpp  BindSetLayoutBase.cpp  BindSetLayoutBase.h  BitSetUtils.h  BufferBase.cpp  BufferBase.h  Cached.hpp  CallbackTaskManager.cpp  CallbackTaskManager.h  CommandAllocator.cpp  CommandEncoder.cpp  CommandEncoder.h  CommandListBase.h  Commands.cpp  Commands.h  ComputePassEncoder.h  ComputePipelineBase.cpp  Constants.h  DeviceBase.cpp  EnumFlagIterator.hpp  Error.h  LinkedList.h  Log.cpp  Log.h  MutexProtected.hpp  NoCopyable.h  ObjectContentHasher.h  PassEncoder.h  PassResourceUsage.cpp  PipelineBase.cpp  PipelineBase.h  PipelineCacheBase.h  QueueBase.cpp  QueueBase.h  RHI.cpp  Ref.hpp  RefCounted.h  RenderPassEncoder.cpp  ResourceBase.cpp  (+12 more)
src/vulkan/: AdapterVk.cpp  AdapterVk.h  BindSetLayoutVk.cpp  BindSetLayoutVk.h  BindSetVk.cpp  BindSetVk.h  BufferVk.cpp  BufferVk.h  CommandListVk.cpp  CommandListVk.h  CommandRecordContextVk.cpp  CommandRecordContextVk.h  ComputePipelineVk.cpp  ComputePipelineVk.h  DescriptorSetAllocation.h  DescriptorSetAllocator.cpp  DescriptorSetAllocator.h  DeviceVk.cpp  DeviceVk.h  ErrorsVk.h  InstanceVk.cpp  InstanceVk.h  PipelineCacheVk.cpp  PipelineCacheVk.h  PipelineLayoutVk.cpp  PipelineLayoutVk.h  QueueVk.cpp  QueueVk.h  RefCountedHandle.h  RenderPipelineVk.cpp  RenderPipelineVk.h  ResourceToDelete.cpp  ResourceToDelete.h  SamplerVk.cpp  SamplerVk.h  ShaderModuleVk.cpp  ShaderModuleVk.h  SurfaceVk.cpp  SurfaceVk.h  SwapChainVk.cpp  (+9 more)
